# TechMentor-AI

./: .env.docker.example  .gitignore  README.md  docker-compose.prod.firebase-file.yml  docker-compose.prod.yml  docker-compose.yml  plan.MD
backend/: .dockerignore  .env.ec2.example  .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-prod.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_profiles.py  0002_add_firebase_uid.py  0003_mvp_tables.py  0004_github_status.py  0005_quizzes_table.py  0006_perf_indexes.py  0007_user_project_completions.py  0008_linkedin_portfolio_projects.py  0009_linkedin_certifications_experience.py  0010_project_submissions.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/core/: __init__.py  config.py  deps.py  exceptions.py  firebase.py  firebase_keys.py  logging.py  security.py
backend/app/data/: career_project_guidance.py  roadmap_course_catalog.py  seed_careers.py
backend/data/: firebase_securetoken_certs.json
backend/docker/: entrypoint.sh  worker.Dockerfile
backend/tests/: conftest.py  test_analysis.py  test_auth.py  test_config.py  test_cv.py  test_github.py  test_health.py  test_linkedin_extract.py  test_linkedin_fetch.py  test_mentor.py  test_portfolio_site_extract.py  test_profiles.py  test_quiz.py  test_rag.py  test_roadmap_course_catalog.py  test_roadmap_courses.py  test_roadmap_duration.py  test_skill_gap_score.py  test_text_sanitize.py  test_url_extract.py  test_user_level.py
(+188 files in other folders)
